// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a title 1`] = `
<Modal
  hardwareAccelerated={true}
  onRequestClose={undefined}
  transparent={true}
  visible={false}
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "height": "100%",
        "justifyContent": "flex-end",
        "opacity": 0,
        "width": "100%",
      }
    }
  >
    <View
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={undefined}
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderTopLeftRadius": 10,
              "borderTopRightRadius": 10,
              "bottom": -500,
              "height": "auto",
              "paddingVertical": 16,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Object {
                  "marginBottom": 16,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "flex": 1,
                  "fontSize": 20,
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Up to the moon!
            </Text>
            <TouchableOpacity
              onPress={undefined}
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "height": 28,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "resizeMode": "cover",
                      "width": 28,
                    },
                    Object {
                      "marginLeft": -28,
                      "marginRight": 0,
                      "opacity": 0.5,
                    },
                  ]
                }
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Object {
                "borderTopColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`renders by default 1`] = `
<Modal
  hardwareAccelerated={true}
  onRequestClose={undefined}
  transparent={true}
  visible={false}
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "height": "100%",
        "justifyContent": "flex-end",
        "opacity": 0,
        "width": "100%",
      }
    }
  >
    <View
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={undefined}
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderTopLeftRadius": 10,
              "borderTopRightRadius": 10,
              "bottom": -500,
              "height": "auto",
              "paddingVertical": 16,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Object {
                  "marginBottom": 16,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <TouchableOpacity
              onPress={undefined}
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "height": 28,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "resizeMode": "cover",
                      "width": 28,
                    },
                    Object {
                      "marginLeft": -28,
                      "marginRight": 0,
                      "opacity": 0.5,
                    },
                  ]
                }
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Object {
                "borderTopColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`renders children 1`] = `
<Modal
  hardwareAccelerated={true}
  onRequestClose={undefined}
  transparent={true}
  visible={false}
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "height": "100%",
        "justifyContent": "flex-end",
        "opacity": 0,
        "width": "100%",
      }
    }
  >
    <View
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={undefined}
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderTopLeftRadius": 10,
              "borderTopRightRadius": 10,
              "bottom": -500,
              "height": "auto",
              "paddingVertical": 16,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Object {
                  "marginBottom": 16,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <TouchableOpacity
              onPress={undefined}
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "height": 28,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "resizeMode": "cover",
                      "width": 28,
                    },
                    Object {
                      "marginLeft": -28,
                      "marginRight": 0,
                      "opacity": 0.5,
                    },
                  ]
                }
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Object {
                "borderTopColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          >
            HODL
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`renders with a visible false state 1`] = `
<Modal
  hardwareAccelerated={true}
  onRequestClose={undefined}
  transparent={true}
  visible={false}
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "height": "100%",
        "justifyContent": "flex-end",
        "opacity": 0,
        "width": "100%",
      }
    }
  >
    <View
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={undefined}
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderTopLeftRadius": 10,
              "borderTopRightRadius": 10,
              "bottom": -500,
              "height": "auto",
              "paddingVertical": 16,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Object {
                  "marginBottom": 16,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <TouchableOpacity
              onPress={undefined}
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "height": 28,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "resizeMode": "cover",
                      "width": 28,
                    },
                    Object {
                      "marginLeft": -28,
                      "marginRight": 0,
                      "opacity": 0.5,
                    },
                  ]
                }
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Object {
                "borderTopColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
